--- a/update.html
+++ b/update.html
@@ -76,9 +76,9 @@
    <form action="" method="post" enctype="multipart/form-data">
       <h3>update profile</h3>
       <p>update name</p>
-      <input type="text" name="name" placeholder="shaikh anas" maxlength="50" class="box">
+      <input type="text" name="name" placeholder="Sheilla Molde" maxlength="50" class="box">
       <p>update email</p>
-      <input type="email" name="email" placeholder="shaikh@gmail.come" maxlength="50" class="box">
+      <input type="email" name="email" placeholder="smoldeh@gmail.come" maxlength="50" class="box">
       <p>previous password</p>
       <input type="password" name="old_pass" placeholder="enter your old password" maxlength="20" class="box">
       <p>new password</p>
@@ -108,7 +108,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2022 by <span>mr. web designer</span> | all rights reserved!
+   &copy; copyright @ 2024 by <span>sheillamaemolde/span> | all rights reserved!
 
 </footer>
 
