--- a/playlist.html
+++ b/playlist.html
@@ -115,39 +115,10 @@
       <a class="box" href="watch-video.html">
          <i class="fas fa-play"></i>
          <img src="images/thumb-1.png" alt="">
-         <h3>complete HTML tutorial (part 01)</h3>
+         <h3>Minna no Nihongo Lesson 13 </h3>
       </a>
 
-      <a class="box" href="watch-video.html">
-         <i class="fas fa-play"></i>
-         <img src="images/post-1-2.png" alt="">
-         <h3>complete HTML tutorial (part 02)</h3>
-      </a>
-
-      <a class="box" href="watch-video.html">
-         <i class="fas fa-play"></i>
-         <img src="images/post-1-3.png" alt="">
-         <h3>complete HTML tutorial (part 03)</h3>
-      </a>
-
-      <a class="box" href="watch-video.html">
-         <i class="fas fa-play"></i>
-         <img src="images/post-1-4.png" alt="">
-         <h3>complete HTML tutorial (part 04)</h3>
-      </a>
-
-      <a class="box" href="watch-video.html">
-         <i class="fas fa-play"></i>
-         <img src="images/post-1-5.png" alt="">
-         <h3>complete HTML tutorial (part 05)</h3>
-      </a>
-
-      <a class="box" href="watch-video.html">
-         <i class="fas fa-play"></i>
-         <img src="images/post-1-6.png" alt="">
-         <h3>complete HTML tutorial (part 06)</h3>
-      </a>
-
+   
    </div>
 
 </section>
